# do not edit -- automatically generated by arch changelog
# arch-tag: automatic-ChangeLog--jgoerzen@complete.org--projects/missingh--head--0.5
#

2004-11-18 19:10:38 GMT	John Goerzen <jgoerzen@complete.org>	patch-79

    Summary:
      Fixed assertRaises
    Revision:
      missingh--head--0.5--patch-79


    modified files:
     ChangeLog testsrc/ConfigParser/Parsertest.hs
     testsrc/Testutil.hs


2004-11-18 18:44:55 GMT	John Goerzen <jgoerzen@complete.org>	patch-78

    Summary:
      Fixed comment line / empty line conflict
    Revision:
      missingh--head--0.5--patch-78


    modified files:
     ChangeLog libsrc/MissingH/ConfigParser/Lexer.hs
     testsrc/ConfigParser/Parsertest.hs


2004-11-18 18:36:43 GMT	John Goerzen <jgoerzen@complete.org>	patch-77

    Summary:
      Fixed eof problems
    Revision:
      missingh--head--0.5--patch-77


    modified files:
     ChangeLog testsrc/ConfigParser/Parsertest.hs


2004-11-18 18:34:40 GMT	John Goerzen <jgoerzen@complete.org>	patch-76

    Summary:
      Fixed eof problems
    Revision:
      missingh--head--0.5--patch-76


    modified files:
     ChangeLog libsrc/MissingH/ConfigParser/Lexer.hs
     libsrc/MissingH/ConfigParser/Parser.hs
     testsrc/ConfigParser/Parsertest.hs


2004-11-18 17:26:26 GMT	John Goerzen <jgoerzen@complete.org>	patch-75

    Summary:
      Removed need for RunParser.hs
    Revision:
      missingh--head--0.5--patch-75


    removed files:
     libsrc/MissingH/ConfigParser/RunParser.hs

    modified files:
     ChangeLog libsrc/MissingH/ConfigParser/Lexer.hs
     libsrc/MissingH/ConfigParser/Parser.hs
     testsrc/ConfigParser/Parsertest.hs testsrc/Tests.hs

    renamed files:
     testsrc/ConfigParser/RunParsertest.hs
       ==> testsrc/ConfigParser/Parsertest.hs


2004-11-18 17:17:15 GMT	John Goerzen <jgoerzen@complete.org>	patch-74

    Summary:
      Basic parser tests work
    Revision:
      missingh--head--0.5--patch-74


    modified files: